src/objects/ACET_Confetti__mdt.object
<CustomObject>
    <fields>
        <fullName>Case_Count__c</fullName>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Header_Message__c</fullName>
        <label>Header Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_List__c</fullName>
        <label>Profile List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SubHeader_Message__c</fullName>
        <label>SubHeader Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordId__c</fullName>
        <label>RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Query__c</fullName>
        <label>sObject Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ACET Confetti</label>
    <pluralLabel>ACET Confetti</pluralLabel>
</CustomObject>